--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.190", features = ["derive"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 google_maps = "3.3.2"
+actix-cors = "0.6.0-beta.4"
