--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4.31", features = ["serde"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 google_maps = "3.3.2"
 actix-cors = "0.6.0-beta.4"
+derefable = "0.1.0"
